--- a/info.html
+++ b/info.html
@@ -4,6 +4,132 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+
+  <body class="bg-secondary">
+    <nav class="navbar bg-dark navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand text-info fs-2" href="#">
+          BENVENUTO NELL'AREA SCOPRI DI PIÙ
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto pt-3">
+            <a class="nav-link" href="#" id="addToCartBtn">
+              <ion-icon
+                name="cart-outline"
+                style="font-size: 1.8rem"
+                class="text-danger"
+              ></ion-icon>
+            </a>
+            <a class="navbar-brand" href="homepage.html">
+              <ion-icon
+                name="home-outline"
+                style="font-size: 1.8rem"
+                class="text-primary"
+              ></ion-icon>
+            </a>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div
+      class="container d-flex justify-content-center align-items-center vh-100"
+    >
+      <div class="card border-info border-5 shadow-lg">
+        <div class="row">
+          <div class="col-6">
+            <!-- Qui verrà visualizzata l'immagine del prodotto -->
+            <img
+              id="productImage"
+              src=""
+              alt="Product Image"
+              class="img-fluid"
+              style="max-height: 30rem"
+            />
+          </div>
+          <div class="col-6">
+            <div
+              class="d-flex justify-content-center align-items-center h-100 bg-dark"
+            >
+              <div class="card-body text-white">
+                <h5 class="card-title fs-2 font-weight-bold">TOP SMARTPHONE</h5>
+                <p class="card-text fs-5">
+                  Design accattivante , innovazioni uniche e prestazioni
+                  all'avanguardia ti faranno entrare nel futuro con questo
+                  smartphone. <br />
+                  Ideale per soddisfare le tue esigenze personali. <br />
+                  Cosa aspetti ?
+                </p>
+                <p class="card-text">
+                  <small class="text-body-secondary"
+                    >DATA IN USCITA 20/02/2024</small
+                  >
+                </p>
+                <button
+                  type="button"
+                  class="btn btn-md btn-outline-info shadow-lg text-white"
+                  id="addToCartBtn"
+                >
+                  ACQUISTA ORA
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // Recupera il prodotto selezionato dal localStorage
+        const selectedProduct = localStorage.getItem("selectedProduct");
+
+        // Ottieni l'elemento dell'immagine
+        const productImage = document.getElementById("productImage");
+
+        // Imposta il percorso dell'immagine in base al prodotto selezionato
+        switch (selectedProduct) {
+          case "IPHONE 15":
+            productImage.src = "/img/IPHONE15_1-65c0ec44.jpg";
+            break;
+          case "XIAOMI 14":
+            productImage.src = "/img/LD0006110352.jpg";
+            break;
+          case "SAMSUNG S24":
+            productImage.src = "/img/s-l1600.jpg";
+            break;
+          default:
+            // Se il prodotto selezionato non è riconosciuto, mostra un'immagine predefinita o un messaggio di errore
+            productImage.src = "/img/default.jpg";
+            break;
+        }
+      });
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
